[package]
name = "brainrot_tg_llm_rewrite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
grammers-client = { git = "https://codeberg.org/Lonami/grammers.git", rev = "384bd48e312a9bdc8f784902dcd0a2431d9a137e" }
grammers-mtsender = { git = "https://codeberg.org/Lonami/grammers.git", rev = "384bd48e312a9bdc8f784902dcd0a2431d9a137e" }
grammers-session = { git = "https://codeberg.org/Lonami/grammers.git", rev = "384bd48e312a9bdc8f784902dcd0a2431d9a137e" }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.9.8"
tracing = "0.1"
tracing-log = "0.2"
notify = "8"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
